CTT_Package/objects/Account.object
<CustomObject>
    <fields>
        <fullName>ACN_Care_Team__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Care Team</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>County__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>County</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Does_contact_know_about_their_exposure__c</fullName>
        <label>Does contact know about their exposure?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Employer_Address__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Employer Address</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Employer_City__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Employer City</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employer_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Employer Name</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employer_Phone__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Employer Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Employer_State__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Employer State</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Example__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Example</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Healthcare_Worker__c</fullName>
        <description>Healthcare Worker</description>
        <inlineHelpText>Is this person a healthcare worker?</inlineHelpText>
        <label>Healthcare Worker</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_Unknown</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Hispanic__c</fullName>
        <label>Hispanic</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Hospital_Reference_Code__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>Hospital Reference Code</label>
        <length>40</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Lab_that_tested__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Lab that tested</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location_of_Death__c</fullName>
        <label>Location of Death</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Location_of_Death</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Maven_Contact_Id__c</fullName>
        <description>Source System ID of Contact/Case- External ID</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <inlineHelpText>Source System ID of Contact/Case</inlineHelpText>
        <label>Enterprise Id</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Middle_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Middle Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mobile__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Mobile</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Next_of_Kin_Notes__c</fullName>
        <description>NEXT_OF_KIN_NOTES</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Next of Kin Notes</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Next_of_Kin_Phone__c</fullName>
        <description>NEXT_OF_KIN_PHONE</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Next of Kin Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Occupation_Value__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Occupation Value</label>
        <referenceTo>Occupation__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Occupation__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Occupation</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ordering_Facility_Description__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Ordering Facility Description</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ordering_Facility_Reference_Code__c</fullName>
        <description>ORDERING_FACILITY Reference Code</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>Ordering Facility Reference Code</label>
        <length>40</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Ordering_Provider_Number__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Ordering Provider Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Death_Location__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Other Death Location</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Occupation__c</fullName>
        <description>OCCUPATION_OTHER_SPECIFY</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Other Occupation</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Race__c</fullName>
        <label>Race</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Race</valueSetName>
        </valueSet>
    </fields>
    <validationRules>
        <fullName>Occupation_Other</fullName>
        <active>true</active>
        <errorConditionFormula>/* Generate an error if Other_Occupation__c is entered but Occupation is not &apos;Other&apos; */

Occupation_Value__r.Name != &apos;Other&apos;
&amp;&amp; NOT(ISBLANK(Other_Occupation__c))</errorConditionFormula>
        <errorDisplayField>Other_Occupation__c</errorDisplayField>
        <errorMessage>Other Occupation can only be used if Occupation equals &apos;Other&apos;</errorMessage>
    </validationRules>
</CustomObject>